--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,14 +1,14 @@
 baseurl = "http://goswagger.io/"
 languageCode = "en-us"
-title = "go-swagger documentation"
-theme="material-design"
+title = "go-swagger toolkit"
+theme="bootie-docs"
 MetaDataFormat = "toml"
 paginate = 9 # To specify a multiple of 3
 # disqusShortname = "Your Disqus Name" # optional
 copyright = "© 2015 go-swagger contributors"
 
 [params]
-  description = "Documentation for the go-swagger toolkit" # optional
+  description = "Swagger 2.0 describes your API's for you, so you don't have to" # optional
   # twitter = "Your Twitter Name" # optional
   github = "go-swagger/go-swagger" # optional
   # facebook = "Your facebook Name" # optional
@@ -17,6 +17,10 @@ copyright = "© 2015 go-swagger contributors"
   # headerCover = "images/headerCover.png" # optional
   # footerCover = "images/footerCover.png" # optional
   # googleAnalyticsUserID = "Your Analytics User Id" # optional
+  withSitePosts = true
+  mainMenu = ["about", "usage"]
+  # noCategoryLink = true
+  repositoryUrl = "https://github.com/go-swagger/go-swagger"
 
 [permalinks]
   post = "/:year/:month/:day/:title/" # optional
